tests/ui/traits/const-traits/const_derives/derive-const-non-const-type.stderr
error: const `impl` for trait `Debug` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-non-const-type.rs:10:16
   |
LL | #[derive_const(Debug)]
   |                ^^^^^ this trait is not `const`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0277]: `A` doesn't implement `Debug`
  --> $DIR/derive-const-non-const-type.rs:11:14
   |
LL | #[derive_const(Debug)]
   |                ----- in this derive macro expansion
LL | pub struct S(A);
   |              ^ the trait `Debug` is not implemented for `A`
   |
   = note: add `#[derive(Debug)]` to `A` or manually `impl Debug for A`
help: consider annotating `A` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | pub struct A;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
